updating expenses.html

--- a/receipt/templates/expenses.html
+++ b/receipt/templates/expenses.html
@@ -4,7 +4,7 @@
 
 
 {% block main %}
-This is the Expeneses page
+This is the Expeneses page, let us add some functionality here.
 {% endblock main %}
 
 
