--- a/receipt/templates/products.html
+++ b/receipt/templates/products.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block main %}
 <main>
-  <h1>Orders</h1>
+  <h1>Products</h1>
 
   <div class="date">
     <input type="date">
