--- a/receipt/templates/base.html
+++ b/receipt/templates/base.html
@@ -84,7 +84,7 @@
           </span>
           <h3>Records</h3>
         </a>
-        <a href="#">
+        <a class="expenses" href="/expenses">
           <span class="material-symbols-outlined">
             credit_card
           </span>
