add javascript to expenses page

--- a/receipt/templates/expenses.html
+++ b/receipt/templates/expenses.html
@@ -101,8 +101,7 @@
 </main> 
 {% endblock main %}
 
-
 {% block pagejs %}
-  
+<script src="{% static 'js/expenses.js' %}"></script>
 {% endblock pagejs %}
   
