include input params check

--- a/receipt/templates/expenses.html
+++ b/receipt/templates/expenses.html
@@ -62,8 +62,8 @@
         <div class="edit-inputs">
           <input type="hidden" name="id">
           <input name="name" placeholder="Item Name" type="text">
-          <input name="cost" placeholder="Cost" type="text">     
-          <input name="quantity" placeholder="Quantity" type="text"> 
+          <input name="cost" placeholder="Cost" type="number">     
+          <input name="quantity" placeholder="Quantity" type="number"> 
           <input name="unit" placeholder="Unit" type="text"> 
         </div>
       <input type="submit" name="" id="submit" value="Save">
@@ -89,8 +89,8 @@
         <div class="edit-inputs">
           <input type="hidden" name="new" value="new">
           <input name="name" placeholder="Item Name" type="text">
-          <input name="cost" placeholder="Cost" type="text">     
-          <input name="quantity" placeholder="Quantity" type="text"> 
+          <input name="cost" placeholder="Cost" type="number">     
+          <input name="quantity" placeholder="Quantity" type="number"> 
           <input name="unit" placeholder="Unit" type="text"> 
         </div>
       <input type="submit" name="" id="submit" value="Add">
