--- a/receipt/templates/products.html
+++ b/receipt/templates/products.html
@@ -66,7 +66,7 @@
             <div></div>
           </div>
         </div>
-      <input type="submit" name="" id="submit" value="Save">
+      <input data-type="edit" type="submit" name="" id="submit" value="Save">
       </form>  
     </div>
     <div class="delete-product">
@@ -92,7 +92,7 @@
           <input name="name" placeholder="Product Name" type="text">
           <input name="price" placeholder="Unit Price" type="text">     
         </div>
-      <input type="submit" name="" id="submit" value="Add">
+      <input data-type="new" type="submit" name="" id="submit" value="Add">
       </form>      
     </div>
     {{ products_js|json_script:"products_js" }}
